# libertree

./: .gitignore  2013-03-22-0025-plainize-posts-via.rb  Gemfile  INSTALLATION.md  LICENCE  MANUAL-INSTALLATION.md  Makefile  README.md  USAGE.md  app.rb  config.ru  config.yaml.example  console-init.rb  console.sh  create-account.rb  createdb.sh  database.yaml.example  generate-key-pair.rb  generate-key-pair.sh  glossary.md  install  libertree-client.gemspec  libertree-db.gemspec  libertree-model.gemspec  libertree.sh  migrate.sh  philosophy.md  service.sh  socket-test.rb  specification.md  test.rb  test.sh  update.sh
backend/hs/: LICENSE  libertree-server.cabal
backend/hs/src/: Main.hs
backend/hs/src/Libertree/Backend/: Command.hs  Dispatch.hs  Request.hs  Server.hs
config/: database.yaml.example  job-processor.yaml.example  libertree.apache.example  libertree.nginx.example  unicorn.conf  unicorn.conf.example
contrib/: Gemfile  css-build.sh
controller/: accounts.rb  base.rb  comment-likes.rb  comments.rb  docs.rb  home.rb  intro.rb  invitations.rb  members.rb  messages.rb  notifications.rb  pools.rb  post-likes.rb  profiles_local.rb  remotestorage.rb  rivers.rb  springs.rb  tags.rb
db/: createdb.sh  createuser.sh  database.yaml.example
doc/: glossary.md  protocol.md
functions/: account-functions.sql  all-functions.sql  member-functions.sql  posts-in-river.sql  tagged_posts.sql
helper/: age.rb  search.rb
hs/: LICENCE  README  libertree-model.cabal
hs/src/Libertree/: Model.hs
hs/src/Libertree/Model/: Comment.hs  CommentLike.hs  Common.hs  Post.hs  PostLike.hs
installer/: PKGBUILD  install
installer-functions/: dependencies  environment  logging  system-user-install
layout/: _chat.xhtml  _head.erb  _menu.erb  _menu.xhtml  _sidebar.xhtml  splash.erb  splash.xhtml
lib/: job-processor.rb  jobs.rb
libertree-backend-rb/: Gemfile  config.yaml.example  database.yaml.example  defaults.yaml  service.sh
libertree-client-rb/: Gemfile  test.rb  test.sh
libertree-db/: .gitignore  LICENCE  createdb.sh  createuser.sh
libertree-frontend-ramaze/: Gemfile  README.md  app.rb  (+4 more)
(+654 files in other folders)
